@@ -1,27 +1,36 @@
 #include <stdio.h>
 #include <iostream.h>
 #include <stdlib.h>
-#include <rawld.h>
+#include <swmgr.h>
 
 int main(int argc, char **argv)
 {
-	RawLD eastons("../../modules/lexdict/rawld/eastons/eastons", "Eastons BD", "Easton's Bible Dictionary");
-	RawLD vines("../../modules/lexdict/rawld/vines/vines", "Vines BD", "Vine's Bible Dictionary");
-	SWModule *lexdict;
+	SWMgr manager;
+	SWModule *target;
+	ModMap::iterator it;
 
-	if (argc < 2) {
-		cerr << "Usage: " << argv[0] << " <\"lookup string\"> [1 - Use Vine's instead of Easton's ]\n";
-		exit(1);
+	if (argc != 3) {
+		fprintf(stderr, "usage: %s <modname> <\"lookup key\">\n", argv[0]);
+		exit(-1);
 	}
 
-	lexdict = (argc > 2) ? &vines : &eastons;
+	it = manager.Modules.find(argv[1]);
+	if (it == manager.Modules.end()) {
+		fprintf(stderr, "Could not find module [%s].  Available modules:\n", argv[1]);
+		for (it = manager.Modules.begin(); it != manager.Modules.end(); it++) {
+			fprintf(stderr, "[%s]\t - %s\n", (*it).second->Name(), (*it).second->Description());
+		}
+		exit(-1);
+	}
 
-	lexdict->SetKey(argv[1]);
+	target = (*it).second;
 
-	(const char *)*lexdict;		// force an entry lookup to resolve key so we
+	target->SetKey(argv[2]);
+
+	(const char *)*target;		// force an entry lookup to resolve key so we
 						// get the idxbuf entry for the key
-	cout << (const char *)(SWKey &)*lexdict << ":\n";
-	lexdict->Display();
+	cout << (const char *)(SWKey &)*target << ":\n";
+	cout << target->StripText();
 	cout << "\n";
 	cout << "==========================\n";
 	return 0;
